# verteiler

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Common/: Common.hpp  ThreadFIFO.hpp  standardlogg.hpp  string_add.hpp
Receiver/: Receiver.cpp  Receiver.hpp
Sender/: Sender.cpp  Sender.hpp
allg/: ThreadFIFO.hpp  standardlogg.hpp  string_add.hpp
kunde/: kunde.cpp  kunde.hpp
lieferant/: lieferant.cpp  lieferant.hpp
test/: Testclient.cpp  Testkombiniert.cpp  Testserver.cpp
